--- a/template.yaml
+++ b/template.yaml
@@ -444,7 +444,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: source/socialmediafunction/
-      Handler: index.handler
+      Handler: index.lambda_handler
       Runtime: python3.6
       MemorySize: 256
       Timeout: 300
@@ -635,7 +635,7 @@ Resources:
     Properties:
       Description: 'Custom Resource - modify S3 events with Lambda'
       CodeUri: source/custom_resources/s3events/
-      Handler: index.handler
+      Handler: index.lambda_handler
       Runtime: python3.6
       Timeout: 10
       Policies:
@@ -784,7 +784,7 @@ Resources:
     Properties:
       Description: 'Custom Resource - modify a domain prefix for the sign-in page hosted by Amazon Cognito'
       CodeUri: source/custom_resources/userpool_domain/
-      Handler: index.handler
+      Handler: index.lambda_handler
       Runtime: python3.6
       Timeout: 10
       Policies:
@@ -875,7 +875,7 @@ Resources:
     Properties:
       Description: 'Custom Resource - modify a mapping template of Amazon Elasticsearch Service'
       CodeUri: source/custom_resources/elasticsearch_template/
-      Handler: index.handler
+      Handler: index.lambda_handler
       Runtime: python3.6
       Timeout: 10
       Policies:
